--- a/README
+++ b/README
@@ -19,6 +19,10 @@ output:
 requires:
     - GD
 
+PNG
+![Maze PNG](https://github.com/lookee/maze/blob/master/samples/maze200x200.png?raw=true)
+
+ASCII
 
 +..+--+--+--+--+--+--+--+--+--+
 |..|      .. .. .. ..|        |
