Update PNG image link to relative path
Fix image link in README to use relative path.

--- a/README
+++ b/README
@@ -21,7 +21,7 @@ requires:
 
 PNG
 
-![Maze PNG](https://raw.githubusercontent.com/lookee/maze/master/samples/maze200x200.png)
+![Maze PNG](./samples/maze200x200.png))
 
 ASCII
 
