Correct image syntax for maze PNG in README
Fix image syntax and update PNG display in README

--- a/README
+++ b/README
@@ -21,7 +21,9 @@ requires:
 
 PNG
 
-![Maze PNG](./samples/maze200x200.png))
+<p align="center">
+  <img src="https://raw.githubusercontent.com/lookee/maze/master/samples/maze200x200.png" alt="MAZE PNG">
+</p>
 
 ASCII
 
